Re-organise nunjucks site build
- Keep non-github-readable docs (e.g nunjucks files) out of the ./docs
directory.
- Build nunjucks site with Metalsmith instead of gulp

--- a/site/pages/examples.njk
+++ b/site/pages/examples.njk
@@ -21,48 +21,48 @@
 
   <h2>Components</h2>
 
-  <p><a href="../components/all.html"><strong>All components</strong></a></p>
+  <p><a href="./components/all.html"><strong>All components</strong></a></p>
 
   <ul class="nhsuk-list">
-    <li><a href="../components/action-link.html">Action link</a></li>
-    <li><a href="../components/breadcrumb.html">Breadcrumb</a></li>
-    <li><a href="../components/care-card-non-urgent.html">Care card non-urgent (blue)</a></li>
-    <li><a href="../components/care-card-urgent.html">Care card urgent (red)</a></li>
-    <li><a href="../components/care-card-emergency.html">Care card emergency (red and black)</a></li>
-    <li><a href="../components/contents-list.html">Contents list</a></li>
-    <li><a href="../components/details.html">Details</a></li>
-    <li><a href="../components/do-dont-list.html">Do and Don't list</a></li>
-    <li><a href="../components/emergency-alert.html">Emergency alert</a></li>
-    <li><a href="../components/expander.html">Expander</a></li>
-    <li><a href="../components/expander-group.html">Expander group</a></li>
-    <li><a href="../components/feedback-banner.html">Feedback banner</a></li>
-    <li><a href="../components/footer.html">Footer</a></li>
-    <li><a href="../components/header.html">Header</a></li>
-    <li><a href="../components/header-transactional.html">Header transactional</a></li>
-    <li><a href="../components/header-navigation.html">Header with navigation</a></li>
-    <li><a href="../components/header-search.html">Header with search</a></li>
-    <li><a href="../components/hero.html">Hero</a></li>
-    <li><a href="../components/hero-image.html">Hero with image</a></li>
-    <li><a href="../components/hero-image-content.html">Hero with image with content</a></li>
-    <li><a href="../components/images.html">Images</a></li>
-    <li><a href="../components/inset-text.html">Inset text</a></li>
-    <li><a href="../components/list-panel.html">List panel</a></li>
-    <li><a href="../components/nav-a-z.html">Nav A-Z</a></li>
-    <li><a href="../components/pagination.html">Pagination</a></li>
-    <li><a href="../components/panel.html">Panel</a></li>
-    <li><a href="../components/panel-grey.html">Panel with grey background</a></li>
-    <li><a href="../components/panel-with-label.html">Panel with label</a></li>
-    <li><a href="../components/panel-group.html">Panel group</a></li>
-    <li><a href="../components/promo.html">Promo</a></li>
-    <li><a href="../components/promo-no-description.html">Promo with no description</a></li>
-    <li><a href="../components/promo-small.html">Promo small</a></li>
-    <li><a href="../components/promo-with-image.html">Promo with image</a></li>
-    <li><a href="../components/promo-group.html">Promo group</a></li>
-    <li><a href="../components/review-date.html">Review date</a></li>
-    <li><a href="../components/skip-link.html">Skip link</a></li>
-    <li><a href="../components/tables.html">Table</a></li>
-    <li><a href="../components/tables-panel.html">Table as a panel</a></li>
-    <li><a href="../components/warning-callout.html">Warning callout</a></li>
+    <li><a href="./components/action-link.html">Action link</a></li>
+    <li><a href="./components/breadcrumb.html">Breadcrumb</a></li>
+    <li><a href="./components/care-card-non-urgent.html">Care card non-urgent (blue)</a></li>
+    <li><a href="./components/care-card-urgent.html">Care card urgent (red)</a></li>
+    <li><a href="./components/care-card-emergency.html">Care card emergency (red and black)</a></li>
+    <li><a href="./components/contents-list.html">Contents list</a></li>
+    <li><a href="./components/details.html">Details</a></li>
+    <li><a href="./components/do-dont-list.html">Do and Don't list</a></li>
+    <li><a href="./components/emergency-alert.html">Emergency alert</a></li>
+    <li><a href="./components/expander.html">Expander</a></li>
+    <li><a href="./components/expander-group.html">Expander group</a></li>
+    <li><a href="./components/feedback-banner.html">Feedback banner</a></li>
+    <li><a href="./components/footer.html">Footer</a></li>
+    <li><a href="./components/header.html">Header</a></li>
+    <li><a href="./components/header-transactional.html">Header transactional</a></li>
+    <li><a href="./components/header-navigation.html">Header with navigation</a></li>
+    <li><a href="./components/header-search.html">Header with search</a></li>
+    <li><a href="./components/hero.html">Hero</a></li>
+    <li><a href="./components/hero-image.html">Hero with image</a></li>
+    <li><a href="./components/hero-image-content.html">Hero with image with content</a></li>
+    <li><a href="./components/images.html">Images</a></li>
+    <li><a href="./components/inset-text.html">Inset text</a></li>
+    <li><a href="./components/list-panel.html">List panel</a></li>
+    <li><a href="./components/nav-a-z.html">Nav A-Z</a></li>
+    <li><a href="./components/pagination.html">Pagination</a></li>
+    <li><a href="./components/panel.html">Panel</a></li>
+    <li><a href="./components/panel-grey.html">Panel with grey background</a></li>
+    <li><a href="./components/panel-with-label.html">Panel with label</a></li>
+    <li><a href="./components/panel-group.html">Panel group</a></li>
+    <li><a href="./components/promo.html">Promo</a></li>
+    <li><a href="./components/promo-no-description.html">Promo with no description</a></li>
+    <li><a href="./components/promo-small.html">Promo small</a></li>
+    <li><a href="./components/promo-with-image.html">Promo with image</a></li>
+    <li><a href="./components/promo-group.html">Promo group</a></li>
+    <li><a href="./components/review-date.html">Review date</a></li>
+    <li><a href="./components/skip-link.html">Skip link</a></li>
+    <li><a href="./components/tables.html">Table</a></li>
+    <li><a href="./components/tables-panel.html">Table as a panel</a></li>
+    <li><a href="./components/warning-callout.html">Warning callout</a></li>
   </ul>
 
 {% endblock %}
