--- a/site/pages/index.njk
+++ b/site/pages/index.njk
@@ -19,21 +19,21 @@
   <div class="nhsuk-grid-row nhsuk-promo-group">
     <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
       {{ promo({
-        "href": "./pages/install.html",
+        "href": "./install.html",
         "heading": "Install",
         "description": "Download and installation instructions."
       }) }}
     </div>
     <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
       {{ promo({
-        "href": "./pages/examples.html",
+        "href": "./examples.html",
         "heading": "Examples",
         "description": "Page layouts and components."
       }) }}
     </div>
     <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
       {{ promo({
-        "href": "./pages/about.html",
+        "href": "./about.html",
         "heading": "About",
         "description": "Getting support and contributing."
       }) }}
