Add syntax highlighting with prismjs

--- a/site/_layouts/layout.njk
+++ b/site/_layouts/layout.njk
@@ -26,6 +26,10 @@
     <link rel="apple-touch-icon" href="{{ baseUrl }}/assets/favicons/apple-touch-icon.png">
     <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
     <link rel="icon" href="{{ baseUrl }}/assets/favicons/favicon.png">
+
+    <!-- syntax highlighting for code snippets -->
+    <link rel="stylesheet" href="{{ baseUrl }}/assets/libraries/prismjs/prism.css">
+    <script src="{{ baseUrl }}/assets/libraries/prismjs/prism.js"></script>
   </head>
 
   <body class="{{ body_class }}">
