Use relative paths in documentation

--- a/site/pages/about.njk
+++ b/site/pages/about.njk
@@ -21,7 +21,7 @@
   <div class="nhsuk-u-reading-width">
 
     <h2>Contributing</h2>
-    <p>Please see our <a href="/nhsuk/nhsuk-frontend/blob/master/docs/contributing/README.md">contributing guidelines</a> on how to set up the project locally and contribute changes to NHS.UK Frontend.</p>
+    <p>Please see our <a href="./docs/contributing/">contributing guidelines</a> on how to set up the project locally and contribute changes to NHS.UK Frontend.</p>
 
     <h2>Get in touch</h2>
     <p>NHS.UK Frontend is actively maintained by a team at NHS Digital, you can contact us on <a href="https://nhsuk.slack.com/messages/CCPLQ9YAJ" rel="nofollow">Slack</a> or <a href="mailto:nhsdigital.nhsuk-frontend@nhs.net">send us an email</a>.</p>
