Compile directly to css/ and js/ directories
This removes the need for the gulp tasks which copy assets into css/ and
js/

--- a/docs/_templates/layout.njk
+++ b/docs/_templates/layout.njk
@@ -16,9 +16,9 @@
     <link rel="preconnect  dns-prefetch" href="https://www.nhs.uk/">
     <link rel="preconnect  dns-prefetch" href="https://assets.nhs.uk/" crossorigin>
 
-    <link rel="stylesheet" href="{{ baseUrl }}/assets/nhsuk.css">
+    <link rel="stylesheet" href="{{ baseUrl }}/assets/css/nhsuk.css">
 
-    <script src="{{ baseUrl }}/assets/nhsuk.js" defer></script>
+    <script src="{{ baseUrl }}/assets/js/nhsuk.js" defer></script>
     <script src="{{ baseUrl }}/assets/libraries/jquery.min.js"></script>
 
     <!--[if IE]><link rel="shortcut icon" href="{{ baseUrl }}/assets/favicons/favicon.ico"><![endif]-->
