--- a/site/pages/components/action-link.njk
+++ b/site/pages/components/action-link.njk
@@ -2,7 +2,7 @@
 {% set title = 'Action link' %}
 {% extends 'component-example.njk' %}
 
-{% set exampleWidth = 'content' %}
+{% set examplePosition = 'content' %}
 
 {% set code %}
   {% from 'components/action-link/macro.njk' import actionLink %}
